Fixed drawer alignment with header - a dummy div not sits above drawer that is the same height as the header, scalable fix. Attachment links will no be disabled by ng-class, whereas before the class name we set to the var name., ng-class sets the disabled link att depending on if the property of the tip is null or not.

--- a/public/stylesheets/main_view.css
+++ b/public/stylesheets/main_view.css
@@ -49,7 +49,7 @@ body{
 /*****************************/
 .drawer{
   position:fixed;
-  top:3em;
+  margin:0;
   left:0;
   padding:0;
   width:3%;
@@ -61,7 +61,7 @@ body{
 .drawer-item{
   padding:0.5em;
   height:5%;
-  border-bottom:0.1em solid #f7f7f7;
+  border-top:0.1em solid #f7f7f7;
   color:#f7f7f7;
   cursor:pointer;
 }
@@ -71,9 +71,6 @@ body{
 .drawer-item:hover,
 .drawer-item:active{
   color:#219ef9;
-}
-.drawer-item:last-child{
-  border-bottom:none;
 }
 .item-icon{
   float:left;
